[tool.poetry]
name = "subtitlecreator"
version = "0.2.0"
description = "Create english subtitles for a video."
authors = ["Zuplyx <patrick_98@t-online.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
charset_normalizer = "^3.3.0"
srt = "^3.5.3"
transformers = "^4.45.1"
accelerate = "^1.0.1"
torchvision = {version = "^0.19.1+cu124", source = "pytorch-gpu"}
torchaudio = {version = "^2.4.1+cu124", source = "pytorch-gpu"}
torch = {version = "^2.4.1+cu124", source = "pytorch-gpu"}

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false