[tool.poetry]
name = "subtitlecreator"
version = "0.2.0"
description = "Create english subtitles for a video."
authors = ["Zuplyx <patrick_98@t-online.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15,!=3.14.1"
charset_normalizer = "^3.3.0"
srt = "^3.5.3"
transformers = ">=5.0.0rc3,<6.0.0"
accelerate = "^1.0.1"
torchvision = {version = ">=0.26+cu130,<0.28+cu130", source = "pytorch-gpu"}
torchaudio = {version = "^2.11.0+cu130", source = "pytorch-gpu"}
torch = {version = "^2.11.0+cu130", source = "pytorch-gpu"}

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false